--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
 @font-face {
     font-family: 'ambleregular';
-    src: url('Amble-Regular-webfont.eot');
-    src: url('Amble-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('Amble-Regular-webfont.woff2') format('woff2'),
-         url('Amble-Regular-webfont.woff') format('woff'),
-         url('Amble-Regular-webfont.ttf') format('truetype'),
-         url('Amble-Regular-webfont.svg#ambleregular') format('svg');
+    src: url('https://github.com/Kharnaaj/PresentationCBO/blob/master/Amble-Regular-webfont.eot');
+    src: url('https://github.com/Kharnaaj/PresentationCBO/blob/master/Amble-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('https://github.com/Kharnaaj/PresentationCBO/blob/master/Amble-Regular-webfont.woff') format('woff'),
+         url('https://github.com/Kharnaaj/PresentationCBO/blob/master/Amble-Regular-webfont.ttf') format('truetype'),
+         url('https://github.com/Kharnaaj/PresentationCBO/blob/master/Amble-Regular-webfont.svg#ambleregular') format('svg');
     font-weight: normal;
     font-style: normal;
 }
