--- a/style.css
+++ b/style.css
@@ -1,14 +1,3 @@
-@font-face {
-    font-family: 'ambleregular';
-    src: url('https://github.com/Kharnaaj/PresentationCBO/blob/master/Amble-Regular-webfont.eot');
-    src: url('https://github.com/Kharnaaj/PresentationCBO/blob/master/Amble-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('https://github.com/Kharnaaj/PresentationCBO/blob/master/Amble-Regular-webfont.woff') format('woff'),
-         url('https://github.com/Kharnaaj/PresentationCBO/blob/master/Amble-Regular-webfont.ttf') format('truetype'),
-         url('https://github.com/Kharnaaj/PresentationCBO/blob/master/Amble-Regular-webfont.svg#ambleregular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
 img 
 {
     display: block;
@@ -31,7 +20,7 @@ img
 
 body
 {
-    background: url(Images/background2.png);
+    background: url(background2.png);
 }
 
 header
