--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+article
+{
+    background: url(background2.png);   
+}
+
 img 
 {
     display: block;
@@ -26,7 +31,6 @@ header
 section
 {
     display: flex;
-    background: url(background2.png);
 }
 
 #experience, #competences, #formation, #interets
